--- a/app/scss/_settings.scss
+++ b/app/scss/_settings.scss
@@ -104,7 +104,9 @@ $secondary-color: $lightTan;
 // small 40 em
 // Media Query Ranges
 // $small-range: (0em, 40em);
+$small-range: (0em, 42em);
 // $medium-range: (40.063em, 64em);
+$medium-range: (42.063em, 64em);
 // $small-range: (0em, 40em);
 // $medium-range: (40.063em, 64em);
 // $large-range: (64.063em, 90em);
